# dynamic_web_scraper

./: .gitignore  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DeveloperRead.md  FINAL_TEST_ORGANIZATION.md  File_Descriptions  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  advanced_demo.py  config.json  flake8_report.txt  flake8_report_after_autoflake.txt  install_undetected_chromedriver.py  main.py  pyproject.toml  pytest.ini  quick_fix.py  requirements-dev.txt  requirements.txt  response.html  run_dashboard.py  setup.cfg  setup_and_test.py  test_implementations.py  test_scraper.py  verify_fix.py
data/: trial.html  user_agents.json  user_agents.txt
debug_html/: debug_summary_20250831_195043.txt  response_visa_vfsglobal_com_20250831_195039_analysis.txt  response_visa_vfsglobal_com_20250831_195550_analysis.txt
development/: README.md  deficient.md  progress_plan.md
docs/: CONTRIBUTOR_GUIDE.md  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md
env/: pyvenv.cfg
requirements/: README.md  advanced.txt  all.txt  base.txt  data.txt  dev.txt  testing.txt  web.txt
scraper/: README.md  Scraper.py  __init__.py  adaptive_config_manager.py  config.py  logging_config.py  main.py  proxy_manager.py  response.html  scraper.py  universal_extractor.py  utils.py
tests/: README.md  Test_User_Agent_Manager.py  __init__.py  conftest.py  run_tests.py  test_Scraper.py  test_css_selectors.py  test_css_selectors_css_rules.py  test_css_selectors_css_selector_generator.py  test_css_selectors_dynamic_selector.py  (+13 more)
(+146 files in other folders)
