[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-web-scraper"
version = "1.0.1"
description = "Advanced dynamic web scraper with Cloudflare bypass, JS rendering, Selenium, Playwright fallback and adaptive extraction."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Yüksel Coşgun", email = "yukselcosgun1@gmail.com" }
]

license = "Apache-2.0"

keywords = [
    "scraping",
    "web-scraping",
    "dynamic-scraping",
    "selenium",
    "playwright",
    "cloudflare",
    "requests-html",
    "automation",
    "crawler"
]

dependencies = [
    "requests>=2.31.0",
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "selenium>=4.15.2",
    "playwright>=1.40.0",
    "undetected-chromedriver>=3.5.5",
    "requests-html>=0.10.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.11.4",
    "matplotlib==3.9.2",
    "seaborn==0.13.0",
    "plotly==5.18.0",
    "schedule==1.2.0",
]

[project.urls]
Homepage = "https://github.com/Yukselcsgn/dynamic_web_scraper"
Source = "https://github.com/Yukselcsgn/dynamic_web_scraper"
Issues = "https://github.com/Yukselcsgn/dynamic_web_scraper/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["scraper*"]
